--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
 <!DOCTYPE html>
-<div class="container">sus</div>
+<div class="container">
+    <div class="snowglobe">
+        <div class="snowman"></div>
+    </div>
+</div>
