--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
+<head>
+  <link rel="stylesheet" href="styles.css" />
+</head>
 <div class="container">
-    <div class="snowglobe">
-        <div class="snowman"></div>
-    </div>
+  <div class="trees"></div>
+  <div class="ground"></div>
 </div>
