--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <link rel="stylesheet" href="styles.css" />
 </head>
-<div class="container">
+<div class="sky">
   <div class="trees"></div>
   <div class="ground"></div>
 </div>
