--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <link rel="stylesheet" href="styles.css" />
 </head>
-<div class="sky">
+<body>
   <div class="trees"></div>
   <div class="ground"></div>
-</div>
+</body>
