--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <div class="trees"></div>
-  <div class="ground"></div>
+  <div class="aurora">
+    <div class="trees"></div>
+    <div class="ground"></div>
+  </div>
 </body>
