--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </head>
 <body>
   <div class="aurora">
+    <div class="puppy"></div>
     <div class="trees"></div>
     <div class="ground"></div>
   </div>
