--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 </head>
 <body>
   <div class="aurora">
-    <div class="puppy"></div>
-    <div class="trees"></div>
-    <div class="ground"></div>
+    <img class="puppy" src="puppy.png"></div>
+    <img class="trees" src="trees.png"></div>
+    <img class="ground" src="ground.png"></div>
   </div>
 </body>
