--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <div class="aurora">
+  <div class="container">
+    <div class="aurora"></div>
     <img class="puppy" src="puppy.png"></div>
     <img class="trees" src="trees.png"></div>
     <img class="ground" src="ground.png"></div>
   </div>
+  
 </body>
