--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 <body>
   <div class="container">
     <div class="aurora"></div>
-    <img class="puppy" src="puppy.png"></div>
-    <img class="trees" src="trees.png"></div>
-    <img class="ground" src="ground.png"></div>
+    <img class="puppy" src="puppy.png" />
+    <img class="ground" src="ground.png" />
+    <img class="trees" src="trees.png" />
   </div>
-  
 </body>
