--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <div class="container">
-    <div class="aurora"></div>
-    <img class="puppy" src="puppy.png" />
+  <div class="puppy">
+    <a class="rainbow" href="graphic-design.html">giragon6</a>
+  </div>
+  <div class="aurora">
     <img class="ground" src="ground.png" />
     <img class="trees" src="trees.png" />
   </div>
