--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+  <img class="graphic-design" src="graphic-design.jpg" />
   <div class="puppy">
-    <a class="rainbow" href="graphic-design.html">giragon6</a>
+    <h3 class="rainbow">giragon6</h3>
   </div>
   <div class="aurora">
     <img class="ground" src="ground.png" />
