--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <h3 class="rainbow">giragon6</h3>
   </div>
   <div class="aurora">
-    <img class="graphic-design" src="graphic-design.jpg" />
-    <img class="ground" src="ground.png" />
-    <img class="trees" src="trees.png" />
+    <img class="graphic-design" src="/img/graphic-design.jpg" />
+    <img class="ground" src="/img/ground.png" />
+    <img class="trees" src="/img/trees.png" />
   </div>
 </body>
