--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h3 class="rainbow">giragon6</h3>
   </div>
   <div class="aurora">
-    <img class="graphic-design" src="/img/graphic-design.jpg" />
+    <img class="graphic-design" src="/img/graphic-design.png" />
     <img class="ground" src="/img/ground.png" />
     <img class="trees" src="/img/trees.png" />
   </div>
