update: add stats

--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+  <div class="stats">
+    <h1 class="stats-heading">WINTER STATS (US East Coast)</h1>
+    <ul class="stats-li">
+      <li>Solstice this year:<br>12/21/2024</li>
+      <li>Length of shortest day this year:<br>9h45</li>
+      <li>Coldest winter on record:<br>1985</li>
+      <li>Coldest (natural) temperature on record:<br>−89.2 °C</li>
+    </ul>
+  </div>
   <div class="puppy">
     <h3 class="rainbow">giragon6</h3>
   </div>
